[package]
name = "conduit"
version = "0.1.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

