[package]
name = "conduit"
version = "0.1.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sqlx = { version = "0.4.2", features = [ "runtime-async-std-rustls", "sqlite", "migrate", "uuid" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = "0.1.42"
async-graphql = "2.0"
async-graphql-tide = "2.0"

[dev-dependencies]
tempdir =  "0.3"
log = "0.4"
env_logger = "0.7.1"
assert-json-diff = "1.1.0"
