[package]
name = "conduit"
version = "0.1.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
json-patch = "0.2.6"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sqlx = { version = "0.5.6", features = [ "macros", "runtime-async-std-rustls", "sqlite", "migrate", "uuid" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = "0.1.42"
async-graphql = { version = "2.8.4", features = ["log", "tracing", "uuid", "chrono", "apollo_tracing"] }
async-graphql-tide = "2.8.4"
tide = "0.16.0"
futures = "0.3"
env_logger = "0.7.1"
# libsqlite3-sys = { version = "*", features = ["bundled"] }

[dev-dependencies]
tempdir =  "0.3"
log = "0.4"
assert-json-diff = "1.1.0"
surf = "2.0.0-alpha.5"
